<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name"> 个人档案</string>
    <string name="emergencycontact">紧急联系人</string>
    <string name="emergencycontent">紧急信息</string>
    <string name="emergencycontactinput">添加</string>
    <string name="nodata">没有数据</string>
    <string name="apnname">姓名：</string>
    <string name="apnnamesec">名字</string>
    <string name="apninputname">请输入姓名</string>
    <string name="apnphonenum">电话：</string>
    <string name="apntelenumb">电话号码</string>
    <string name="apnnumber">号码</string>
    <string name="apnqqnumb">QQ号码</string>
    <string name="apnadress">地址</string>
    <string name="apnadressis">地址: </string>
    <string name="apnbirthday">出生日期</string>
    <string name="apnbirthdayis">生日: </string>
    <string name="apnfinish">完成</string>
    <string name="apnredo">重置</string>
    <string name="apnsearch">查询</string>
    <string name="apncontent">内容</string>
    <string name="apnpersoniforinput">个人信息录入</string>
    <string name="apnpersoniforinputok">录入完成</string>
    <string name="apnmeihua">梅花三弄</string>
    <string name="apninputemgercontactinfor">完成</string>
    <string name="apnQQis">QQ: </string>
    <string name="apninputphonenum">请输入电话</string>
    <string name="apnDialerPhone">拨号</string>
    <string name="apnSendSMS">发送短消息</string>
    <string name="apnEditData">编辑内容</string>
    <string name="apnDeleteData">删除内容</string>
    <string name="apneditdata">编辑数据</string>
    <string name="apnphmanage">电话簿管理</string>
    <string name="apnuploadphb">上传电话簿</string>
    <string name="apndownloadphb">下载电话簿</string>
    <string name="apninputtestphbnum">请输入测试号码</string>
    <string name="apnspace"> </string>
    <string name="azconfirm">确定</string>
    <string name="azcancel">取消</string>
    <string name="AzInformationNotice">提示信息</string>
    <string name="AzInfoUpOK">资料上传成功!</string>
    <string name="AzInfoUpErr">资料上传失败!</string>
    <string name="AzInfoAddErr">推荐只添加三个紧急联系人，若要添加其他联系人，请删除一个重试！</string>
    <string name="AzInfoExitNotice">确定退出录入界面吗?</string>
    <string name="AzWaiting">请稍等...</string>
    <string name="AzUpdataIng">正在上传数据</string>
    <string name="AzNameNotice">用户姓名，不能为空</string>
    <string name="AzPhoneNotice">手机号码，不能为空</string>
    <string name="AzCertificateTypeNotice">证件类型，不能为空</string>
    <string name="AzCertificateNumNotice">证件号码，不能为空</string>
    <string name="AzInsuranceTpyeNotice">服务项目，不能为空</string>
    <string name="AzDataTypNotice">数据类型，不能为空</string>
    <string name="AzDiseaseTpyeNotice">身体状况，不能为空</string>
    <string name="AzConstitutionNotice">体质测试，不能为空</string>
    <string name="AzImeiNum">IMEI号为空</string>
    <string name="AzContactUpErr">通迅录上传失败！通迅录为空或数据连接未打开，请重试。</string>
    <string name="AzInformationNoticeErr">紧急联系人上传失败！请检查网络是否打开，并重新添加紧急联系人。</string>
    <string name="AzInformationNoticeOk">紧急联系人上传成功!</string>
    <string name="AzHeadContact">紧急联系人</string>
    <string name="AzHeadContactDelAll">全部删除</string>
    <string name="AzHeadContactDel">删除</string>
    <string name="AzHeadContactdial">呼叫</string>
    <string name="Succe">成功</string>
    <string name="False">失败</string>
    <string name="Boy">男</string>
    <string name="Girl">女</string>
    <string name="IdCard">身份证</string>
    <string name="Passport">护照</string>
    <string name="Armyman">军官证</string>
    <string name="Driver">驾驶证</string>
    <string name="Other">其他</string>
    <string name="NewInfo">新单</string>
    <string name="UpData">数据更新</string>
    <string name="Add">增人</string>
    <string name="Decrease">减人</string>
    <string name="AType">1平和质（A型）</string>
    <string name="BType">2气虚质（B型）</string>
    <string name="CType">3阳虚质（C型）</string>
    <string name="DType">4阴虚质（D型）</string>
    <string name="EType">5痰湿质（E型）</string>
    <string name="FType">6湿热质（F型）</string>
    <string name="GType">7血瘀质（G型）</string>
    <string name="HType">8气郁质（H型）</string>
    <string name="IType">9特禀质（I型）</string>
    <string name="phbdelete">已删除</string>
    <string name="SettingUserName">用户姓名（必填）</string>
    <string name="SettingUserPhone">手机号码（必填）</string>
    <string name="SettingUserSex">性别：</string>
    <string name="SettingUserAge">年龄</string>
    <string name="SettingUserHeight">身高（厘米）</string>
    <string name="SettingUserWeight">体重（公斤）</string>
    <string name="SettingUserEmergentName">紧急联系人</string>
    <string name="SettingUserEmergentPhone">紧急联系方式</string>
    <string name="SettingUserCertificateType">证件类型（必填）</string>
    <string name="SettingUserCertificateTypeDialogTitle">选择类型</string>
    <string name="SettingUserCertificateNum">证件号码（必填）</string>
    <string name="SettingUserInsuranceStar">保险生效日期</string>
    <string name="SettingUserInsuranceEnd">保险终止日期</string>
    <string name="SettingUserAddressProvince">省份：</string>
    <string name="SettingUserAddressProvinceDialogTitle">选择省份</string>
    <string name="SettingUserAddressCity">城市：</string>
    <string name="SettingUserAddressInfo">地址：</string>
    <string name="SettingUserConstitution">体质测试（必填）</string>
    <string name="SettingUserDataType">数据类型（必填）</string>
    <string name="SettingUserDataTypeDialogTitle"> 选择类型 </string>
    <string name="SettingUserRemark">备注 </string>
    <string name="SettingUserDisease">身体状况（必填） </string>
    <string name="SettingUserDisease_01">1、肠胃疾病 </string>
    <string name="SettingUserDisease_02">2、高血脂 </string>
    <string name="SettingUserDisease_03">3、高血脂压</string>
    <string name="SettingUserDisease_04">4、糖尿病 </string>
    <string name="SettingUserDisease_05">5、心脑血管</string>
    <string name="SettingUserDisease_06">6、心脏病 </string>
    <string name="SettingUserDisease_07">7、肝胆疾病 </string>
    <string name="SettingUserDisease_08">8、肾脏疾病 </string>
    <string name="SettingUserDisease_09">9、泌尿生殖系统 </string>
    <string name="SettingUserDisease_10">10、骨科疾病</string>
    <string name="SettingUserDisease_11">11、健康</string>
    <string name="SettingUserDisease_12">12、其他 </string>
    <string name="SettingUserInsuranceItems">服务项目（必填）</string>
    <string name="SettingUserInsuranceItems_01">咨询</string>
    <string name="SettingUserInsuranceItems_02">紧急救援</string>
    <string name="SettingUserInsuranceItems_03">陪检</string>
    <string name="SettingUserInsuranceItems_04">预约挂号</string>
    <string name="SettingUserInsuranceItems_05">转运</string>
    <string name="SettingUserInsuranceItems_06">重大疾病绿色通道</string>
    <string name="SettingUserInsuranceItems_07">出诊医生</string>
    <string name="SettingUserInsuranceItems_08">PET-CT</string>
    <string name="SettingUserInsuranceItems_99">所有服务项目</string>
    <string name="SettingUserConstitutionDialogTitle">按描述确认属于哪种体质</string>
    <string name="SettingUserHeightUnil">（厘米）</string>
    <string name="SettingUserWeightUnil">（公斤）</string>
    <string name="SettingUserAgeUnil">（ 岁  ）</string>
    <string name="SettingUpStep">上一页</string>
    <string name="SettingNextStep">下一页</string>
    <string name="PersonLocation">http://210.51.7.193/io/PersonLocation.aspx</string>
    <string name="PersonEmergencyContact">http://210.51.7.193/io/PersonEmergencyContact.aspx</string>
    <string name="PersonTongXunLu">http://210.51.7.193/io/PersonTongXunLu.aspx</string>
    <string name="PersonInfo">http://210.51.7.193/io/PersonInfo.aspx</string>
    <string name="gpsmmserrorindc">由于信号不稳定,获取其地理位置信息时解析失败,请稍后再试!</string>
    <style name="CustomWindowTitleBackground"> 
    <item name="android:background">#565656</item>
		</style>
    <style name="userdefined" parent="@android:style/Theme.Light"> 
    	<item name="android:windowTitleSize">50sp</item> 
    	<item name="android:windowTitleBackgroundStyle">@style/CustomWindowTitleBackground</item>
    	<item name="android:textSize">22sp</item>
	</style>
    <style name="settingsdefined"> 
        <item name="android:windowTitleBackgroundStyle">@style/CustomWindowTitleBackground</item>
    	<item name="android:background">@drawable/bk</item>
		</style>
</resources>
