<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk" >
   <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"> 
            <Button 
                android:text="@string/SettingUpStep"
                android:id="@+id/button_insu_item_up"
    	        android:layout_width="160dp" 
    	        android:layout_height="wrap_content" 
    	        android:textSize="30sp"
    	        android:textColor="#ffffff00"
    	        android:background="#00000000">
            </Button>
            <Button 
                android:id="@+id/button_insu_item_inputok" 
                android:text="@string/apnpersoniforinputok"
                android:layout_width="160dp" 
    	        android:layout_height="wrap_content"
                android:textSize="30sp" 
                android:layout_alignParentRight="true" 
                android:layout_gravity="right"
                android:textColor="#ffffff00"
                android:background="#00000000">
            </Button>
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="10dp">
    </RelativeLayout> 
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp">
        <TextView 
            android:text="@string/SettingUserInsuranceItems" 
            android:id="@+id/text_insu_item"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="30dip">
        </TextView>        
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="10dp">
    </RelativeLayout> 
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp">
        <CheckBox
            android:text="@string/SettingUserInsuranceItems_01" 
            android:id="@+id/check_insu_item_01"
            android:layout_width="160dp"
            android:layout_height="fill_parent"
            android:textColor="@android:color/white"
            android:textSize="20dip">
        </CheckBox>
        <CheckBox
            android:text="@string/SettingUserInsuranceItems_02" 
            android:id="@+id/check_insu_item_02"
            android:layout_width="160dp"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/check_insu_item_01"
            android:textColor="@android:color/white"
            android:textSize="20dip">
        </CheckBox>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="10dp">
    </RelativeLayout> 
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp">
        <CheckBox
            android:text="@string/SettingUserInsuranceItems_03" 
            android:id="@+id/check_insu_item_03"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20dip">
        </CheckBox>
        <CheckBox
            android:text="@string/SettingUserInsuranceItems_04" 
            android:id="@+id/check_insu_item_04"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/check_insu_item_03"
            android:textColor="@android:color/white"
            android:textSize="20dip">
        </CheckBox>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="10dp">
    </RelativeLayout> 
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp">
        <CheckBox
            android:text="@string/SettingUserInsuranceItems_05" 
            android:id="@+id/check_insu_item_05"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20dip">
        </CheckBox>
        <CheckBox
            android:text="@string/SettingUserInsuranceItems_06" 
            android:id="@+id/check_insu_item_06"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/check_insu_item_05"
            android:textColor="@android:color/white"
            android:textSize="20dip">
        </CheckBox>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="10dp">
    </RelativeLayout> 
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp">
        <CheckBox
            android:text="@string/SettingUserInsuranceItems_07" 
            android:id="@+id/check_insu_item_07"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20dip">
        </CheckBox>
        <CheckBox
            android:text="@string/SettingUserInsuranceItems_08" 
            android:id="@+id/check_insu_item_08"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/check_insu_item_07"
            android:textColor="@android:color/white"
            android:textSize="20dip">
        </CheckBox>
    </RelativeLayout> 
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="10dp">
    </RelativeLayout> 
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp">
        <CheckBox
            android:text="@string/SettingUserInsuranceItems_99" 
            android:id="@+id/check_insu_item_99"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20dip">
        </CheckBox>
        
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="180dp">
    </RelativeLayout> 
    
</LinearLayout>
