<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:background="@color/lightgrey"
	android:layout_width="match_parent"
	android:minWidth="320dp"
	android:layout_height="wrap_content">

	<EditText android:id="@+id/contact_name_2"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dip"
		android:textSize="28sp"
		android:singleLine="true"
		android:hint="@string/apninputname"
		android:background="@drawable/editbox_background" />

	<EditText android:id="@+id/contact_phone_2"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dip"
		android:textSize="28sp"
		android:singleLine="true"
		android:numeric="integer"
		android:hint="@string/apninputphonenum"
		android:background="@drawable/editbox_background" />
		
	<LinearLayout 
		android:orientation="horizontal"
		android:background="@color/lightgrey"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >
		
		<Button android:id="@+id/btn_positive"
			android:layout_margin="5dp"
			android:layout_weight="1"
			android:layout_width="0dp"
			android:text="@string/azconfirm"
			android:textSize="28sp"
			android:layout_height="wrap_content" />
	
		<Button android:id="@+id/btn_negative"
			android:layout_margin="5dp"
			android:layout_weight="1"
			android:layout_width="0dp"
			android:text="@string/azcancel"
			android:textSize="28sp"
			android:layout_height="wrap_content" />
	</LinearLayout>
</LinearLayout>
