<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk" >   
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"> 
            <Button 
                android:text="@string/SettingUpStep"
                android:id="@+id/button_sex_up"
    	        android:layout_width="160dp" 
    	        android:layout_height="wrap_content" 
    	        android:textSize="30sp"
    	        android:textColor="#ffffff00"
    	        android:background="#00000000">
            </Button>
            <Button 
                android:id="@+id/button_sex_next" 
                android:text="@string/SettingNextStep"
                android:layout_width="160dp" 
    	        android:layout_height="wrap_content"
                android:textSize="30sp" 
                android:layout_alignParentRight="true" 
                android:layout_gravity="right"
                android:textColor="#ffffff00"
                android:background="#00000000">
            </Button>
    </RelativeLayout> 
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="10dp">
    </RelativeLayout> 
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">
         <TextView 
            android:text="@string/SettingUserSex" 
            android:id="@+id/text_sex"
            android:layout_width="100dp"
            android:layout_height="wrap_content"     
            android:textColor="@android:color/white"       
            android:textSize="30dip">
        </TextView>
        <RadioGroup
            android:id="@+id/selectsex_key"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:layout_toRightOf="@id/text_sex"
            android:orientation="vertical"
            android:checkedButton="@+id/radio_sex_woman"> 
            <RadioButton 
                 android:id="@id/radio_sex_woman" 
                 android:layout_width="fill_parent" 
                 android:text="@string/Girl" 
                 android:textColor="@android:color/white"
                 android:textSize="30dip"
                 > 
            </RadioButton> 
            <RadioButton 
                android:id="@+id/radio_sex_man" 
                android:layout_width="fill_parent" 
                android:text="@string/Boy"
                android:textColor="@android:color/white"
                android:textSize="30dip">
            </RadioButton> 
        </RadioGroup> 
     </LinearLayout>
     </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp">
    </RelativeLayout> 
    
</LinearLayout>
