<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk" >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button 
                android:text="@string/SettingUpStep"
                android:id="@+id/button_certificate_up"
    	        android:layout_width="160dp" 
    	        android:layout_height="wrap_content"
    	        android:textSize="30sp"
    	        android:textColor="#ffffff00"
                android:background="#00000000">
        </Button>
        <Button 
            android:text="@string/SettingNextStep"
            android:id="@+id/button_certificate_next"
    	    android:layout_width="160dp" 
    	    android:layout_height="wrap_content"  
    	    android:textSize="30sp"    	    
    	    android:layout_alignParentRight="true"    
    	    android:textColor="#ffffff00"	    
    	    android:background="#00000000">
        </Button>            
     </RelativeLayout> 
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="10dp">
    </RelativeLayout>        
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView 
            android:text="@string/SettingUserCertificateType" 
            android:id="@+id/text_certificate_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"          
            android:textColor="@android:color/white"               
            android:textSize="30dip">
        </TextView>
        <Spinner
            android:id="@+id/certificateType_key"
            android:entries="@array/certificate_entryname"  
		    android:entryValues="@array/certificate_entryname" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_certificate_type"      
            android:dialogTitle="@string/SettingUserCertificateTypeDialogTitle"
		    android:textSize="30dip">
        </Spinner>
    </RelativeLayout>    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="10dp">
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView 
            android:text="@string/SettingUserCertificateNum" 
            android:id="@+id/text_certificate_num"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"            
            android:textColor="@android:color/white"             
            android:textSize="30dip">
        </TextView>
        <EditText 
           android:id="@+id/certificateNum_key"
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   android:layout_below="@id/text_certificate_num"
		   android:textColor="@android:color/black"		
		   android:numeric="integer"
		   android:maxLength="25"   	   
		   android:textSize="30dip">
        </EditText>
    </RelativeLayout> 
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="270dp">
    </RelativeLayout> 
    
</LinearLayout>
