<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk" >
     <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"> 
            <Button 
                android:text="@string/SettingUpStep"
                android:id="@+id/button_disease_up"
    	        android:layout_width="160dp" 
    	        android:layout_height="wrap_content" 
    	        android:textSize="30sp"
    	        android:textColor="#ffffff00"
    	        android:background="#00000000">
            </Button>
            <Button 
                android:id="@+id/button_disease_next" 
                android:text="@string/SettingNextStep"
                android:layout_width="160dp" 
    	        android:layout_height="wrap_content"
                android:textSize="30sp" 
                android:layout_alignParentRight="true" 
                android:layout_gravity="right"
                android:textColor="#ffffff00"
                android:background="#00000000">
            </Button>
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="10dp">
    </RelativeLayout> 
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp">
        <TextView 
            android:text="@string/SettingUserDisease" 
            android:id="@+id/text_disease"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="30dip">
        </TextView>        
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="10dp">
    </RelativeLayout> 
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ListView
		        android:id="@+id/list_disease"
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:cacheColorHint="#0000"
	    />
    </RelativeLayout>  
</LinearLayout>
